# Job-Scrapper

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
job_scrapper/: __main__.py  items.py  pipelines.py  settings.py
job_scrapper/spiders/: __init__.py  base.py  company.py  glassdoor.py  indeed.py  instahire.py  linkedin.py  naukri.py  tophire.py  wellfound.py
job_scrapper/utils/: url_builder.py
tests/: test_cli.py  test_experience_filter.py  test_integration_cli.py  test_items.py  test_naukri_spider.py  test_spiders.py  test_url_builder.py  test_wellfound_spider.py
